CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Change_in_Control_Merger__c.field-meta.xml
<CustomField>
    <fullName>APTS_Change_in_Control_Merger__c</fullName>
    <label>Change of Control Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Restrictions</fullName>
            </value>
            <value>
                <fullName>Notice Required</fullName>
            </value>
            <value>
                <fullName>Consent Required</fullName>
            </value>
            <value>
                <fullName>Consent Required Only if Competitor of Acquiror</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>