CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Indemnification_Categories__c.field-meta.xml
<CustomField>
    <fullName>APTS_Indemnification_Categories__c</fullName>
    <description>Indemnification categories</description>
    <label>Indemnification Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Breach of Contract</fullName>
                <isActive>false</isActive>
                <label>Breach of Contract</label>
            </value>
            <value>
                <fullName>Confidentiality</fullName>
                <isActive>false</isActive>
                <label>Confidentiality</label>
            </value>
            <value>
                <fullName>Data Security</fullName>
                <isActive>false</isActive>
                <label>Data Security</label>
            </value>
            <value>
                <fullName>IP Infringement</fullName>
                <isActive>false</isActive>
                <label>IP Infringement</label>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
                <isActive>false</isActive>
                <label>Non-Standard</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Standard (IP Infringement Only)</fullName>
                <isActive>false</isActive>
                <label>Standard (IP Infringement Only)</label>
            </value>
            <value>
                <fullName>Standard- Third party IP</fullName>
                <isActive>false</isActive>
                <label>Standard- Third party IP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>