CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Penalties__c.field-meta.xml
<CustomField>
    <fullName>APTS_Penalties__c</fullName>
    <description>SLA penalties</description>
    <label>SLA Penalties</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
                <default>true</default>
                <label>Credit</label>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>