CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Security_Incident_Notification__c.field-meta.xml
<CustomField>
    <fullName>APTS_Security_Incident_Notification__c</fullName>
    <inlineHelpText>Please choose the number of hours that we have to notify a customer of a data breach incident.</inlineHelpText>
    <label>Required Timeframe for SI Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within 72 Hours of Conga&apos;s Notice</fullName>
            </value>
            <value>
                <fullName>Within 48 Hours of Conga&apos;s Notice</fullName>
            </value>
            <value>
                <fullName>Within 24 Hours of Conga&apos;s Notice</fullName>
            </value>
            <value>
                <fullName>Immediately Upon Conga&apos;s Notice</fullName>
            </value>
            <value>
                <fullName>24 Hours</fullName>
                <isActive>false</isActive>
                <label>24 Hours</label>
            </value>
            <value>
                <fullName>48 Hours</fullName>
                <isActive>false</isActive>
                <label>48 Hours</label>
            </value>
            <value>
                <fullName>Notice</fullName>
                <isActive>false</isActive>
                <label>Notice</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>