CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_SLA_Termination__c.field-meta.xml
<CustomField>
    <fullName>APTS_SLA_Termination__c</fullName>
    <description>SLA termination rights</description>
    <inlineHelpText>Can Customer terminate due to SLA downtime?</inlineHelpText>
    <label>Customer Can Terminate for SLA Downtime</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>