CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Standard_NonStandard_PS_Terms__c.field-meta.xml
<CustomField>
    <fullName>APTS_Standard_NonStandard_PS_Terms__c</fullName>
    <inlineHelpText>Please list deviations from Standard PS Terms</inlineHelpText>
    <label>Non-Standard PS Terms</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>