CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Termination_for_Convenience__c.field-meta.xml
<CustomField>
    <fullName>APTS_Termination_for_Convenience__c</fullName>
    <label>Termination for Convenience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>