CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/APTS_Unlimited_Liability_Direct__c.field-meta.xml
<CustomField>
    <fullName>APTS_Unlimited_Liability_Direct__c</fullName>
    <description>Categories of unlimited direct liability</description>
    <label>Limitation of Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Confidentiality</fullName>
                <isActive>false</isActive>
                <label>Confidentiality</label>
            </value>
            <value>
                <fullName>Data Security</fullName>
                <isActive>false</isActive>
                <label>Data Security</label>
            </value>
            <value>
                <fullName>IP Infringement Indemnification</fullName>
                <isActive>false</isActive>
                <label>IP Infringement Indemnification</label>
            </value>
            <value>
                <fullName>IP Ownership</fullName>
                <isActive>false</isActive>
                <label>IP Ownership</label>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
                <isActive>false</isActive>
                <label>Non-Standard</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other Indemnification</fullName>
                <isActive>false</isActive>
                <label>Other Indemnification</label>
            </value>
            <value>
                <fullName>Standard (IP Infringement Only)</fullName>
                <isActive>false</isActive>
                <label>Standard (IP Infringement Only)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>