CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Apttus__Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Termination_Date__c</fullName>
    <description>Date contract terminated</description>
    <inlineHelpText>The date either party provided notice of termination to the other party.</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>