CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Conga_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Conga_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>