CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Insurance_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Obligations__c</fullName>
    <label>Insurance Obligations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Obligations</fullName>
            </value>
            <value>
                <fullName>Add as a Certificate Holder</fullName>
            </value>
            <value>
                <fullName>Add as an Additional Insured</fullName>
            </value>
            <value>
                <fullName>Customer Obligations</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes - Includes Specific Categories and/or Coverage Levels</fullName>
                <isActive>false</isActive>
                <label>Yes - Includes Specific Categories and/or Coverage Levels</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>