CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Legal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Legal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Reviewer</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>User not assigned to Legal Profile.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Legal</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>