CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Office365ExternalReview_Custom__c.field-meta.xml
<CustomField>
    <fullName>Office365ExternalReview_Custom__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send for Office 365 External Review</label>
    <type>Text</type>
</CustomField>