CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Office365InternalReview_Custom__c.field-meta.xml
<CustomField>
    <fullName>Office365InternalReview_Custom__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send for Office 365 Internal Review</label>
    <type>Text</type>
</CustomField>