CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <description>This is a Renewal Type for Agreement</description>
    <inlineHelpText>What type of renewal is it? Terms?</inlineHelpText>
    <label>Subscription Services Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Unilateral</fullName>
            </value>
            <value>
                <fullName>Mutual Negotiation</fullName>
            </value>
            <value>
                <fullName>Subscription Auto Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>