CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Renewal_Uplift_Cap_Language__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Uplift_Cap_Language__c</fullName>
    <inlineHelpText>Please List deviations to Standard Terms.</inlineHelpText>
    <label>Renewal Uplift Cap Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>