CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/SendForCongaSign_Custom__c.field-meta.xml
<CustomField>
    <fullName>SendForCongaSign_Custom__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send for Conga Sign - Custom</label>
    <type>Text</type>
</CustomField>