CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/SendForSignatures_Custom__c.field-meta.xml
<CustomField>
    <fullName>SendForSignatures_Custom__c</fullName>
    <description>Send for Wet Signatures</description>
    <formula>IF( OR( 
		AND(APTS_Record_Type_Name__c != &quot;MPA&quot;,
			APTS_Record_Type_Name__c != &quot;DPA&quot;,
			APTS_Record_Type_Name__c != &quot;NDA&quot;,
			APTS_Record_Type_Name__c != &quot;MSSA&quot;,
			OR($User.Id = OwnerId , $Profile.Name = &apos;Sales Ops&apos;, $User.Department = &apos;240000 Legal&apos;),
			CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.Send_For_Wet_Signatures.Agreement_Process_Flow_Short_Name__c, APTS_Process_Flow__c),
			CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.Send_For_Wet_Signatures.Agreement_Status_Category__c, TEXT(Apttus__Status_Category__c)),
			CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.Send_For_Wet_Signatures.Agreement_Status__c, TEXT(Apttus__Status__c))
		)
		,
		AND(APTS_Record_Type_Name__c != &quot;MPA&quot;,
			APTS_Record_Type_Name__c != &quot;DPA&quot;,
			APTS_Record_Type_Name__c != &quot;NDA&quot;,
			APTS_Record_Type_Name__c != &quot;MSSA&quot;,
			OR($User.Id = OwnerId , $Profile.Name = &apos;Sales Ops&apos;, $User.Department = &apos;240000 Legal&apos;),
			CONTAINS($CustomMetadata.Agreement_Action_Mapping__mdt.Send_For_Wet_Signatures.Additional_Inclusion__c, APTS_Process_Flow__c &amp; TEXT(Apttus__Status_Category__c) &amp; TEXT(Apttus__Status__c))
		)
	)
	,
	IF( OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;),
		$CustomMetadata.Agreement_Action_Mapping__mdt.Send_For_Wet_Signatures.Lightning_Link__c,
		$CustomMetadata.Agreement_Action_Mapping__mdt.Send_For_Wet_Signatures.Link__c)
	,
	NULL
)</formula>
    <inlineHelpText>Send for Wet Signatures</inlineHelpText>
    <label>Send for Wet Signature</label>
    <type>Text</type>
</CustomField>