CZeroCLM/force-app/main/default/objects/Apttus__APTS_Agreement__c/validationRules/CNG_End_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CNG_End_Date_Check</fullName>
    <active>true</active>
    <description>Check that either perpetual is checked or end date is filled in when agreement goes into effect</description>
    <errorConditionFormula>AND(
ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),
AND(ISNULL(Apttus__Contract_End_Date__c),NOT(Apttus__Perpetual__c)),
OR(ISNULL(Apttus__Term_Months__c),Apttus__Term_Months__c&lt;=0),
APTS_Record_Type_Name__c != &quot;MSSA&quot;,
APTS_Record_Type_Name__c != &quot;NDA&quot;,
APTS_Record_Type_Name__c != &quot;DPA&quot;,
APTS_Record_Type_Name__c != &quot;MPA&quot;
)</errorConditionFormula>
    <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
    <errorMessage>Please enter the Agreement End Date or mark the Agreement as Perpetual prior to executing the agreement.</errorMessage>
</ValidationRule>